sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,25 @@
-sonar.projectKey=my_python_app
-sonar.projectName=My Python App
-sonar.projectVersion=1.0
-sonar.sources=app
+sonar.projectKey=My-Python-App
+sonar.sources=.
+sonar.exclusions=**/__pycache__/**,**/*.pyc
 sonar.tests=tests
-sonar.language=py
-sonar.python.version=3
-sonar.sourceEncoding=UTF-8
+sonar.test.inclusions=tests/**/*.py
+sonar.python.version=3.12
+
+
+
+
+
+
+
+#sonar.projectKey=my_python_app
+#sonar.projectName=My Python App
+#sonar.projectVersion=1.0
+#sonar.sources=app
+#sonar.tests=tests
+#sonar.language=py
+#sonar.python.version=3
+#sonar.sourceEncoding=UTF-8
+
+
+
 
